ezyplot-x1/force-app/main/default/objects/LR_Title__c/LR_Title__c.object-meta.xml
<CustomObject>
    <label>LR Title</label>
    <nameField>
        <label>LR Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LR Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>