ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Alienation_Clause_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Alienation_Clause_Indicator__c</fullName>
    <label>Alienation Clause Indicator (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>