ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>Area_retrieval_status__c</referenceTo>
    <relationshipLabel>Titles</relationshipLabel>
    <relationshipName>Title</relationshipName>
    <type>Lookup</type>
</CustomField>