ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Associated_Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Associated_Property_Description__c</fullName>
    <label>Associated Property Description (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>