ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Associated_Property_Description_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Property_Description_ID__c</fullName>
    <label>Associated Property Description ID (LR)</label>
    <length>99</length>
    <type>Text</type>
</CustomField>