ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>