ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Debug_APEX_bufer__c.field-meta.xml
<CustomField>
    <fullName>Debug_APEX_bufer__c</fullName>
    <label>Debug APEX buffer</label>
    <length>99</length>
    <type>Text</type>
</CustomField>