ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Lease_left__c.field-meta.xml
<CustomField>
    <fullName>Lease_left__c</fullName>
    <formula>(LeaseTerm_end_date__c - TODAY()) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In years</inlineHelpText>
    <label>Lease left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>