ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Lease_registration_date__c.field-meta.xml
<CustomField>
    <fullName>Lease_registration_date__c</fullName>
    <label>Lease registration date</label>
    <type>Date</type>
</CustomField>