ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Lease_registration_date_string__c.field-meta.xml
<CustomField>
    <fullName>Lease_registration_date_string__c</fullName>
    <label>Lease registration date string (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>