ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/LeaseTerm_end_date__c.field-meta.xml
<CustomField>
    <fullName>LeaseTerm_end_date__c</fullName>
    <label>LeaseTerm end date</label>
    <type>Date</type>
</CustomField>