ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/OS_UPRN__c.field-meta.xml
<CustomField>
    <fullName>OS_UPRN__c</fullName>
    <label>OS UPRN (LR)</label>
    <length>99</length>
    <type>Text</type>
</CustomField>