ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plot</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Titles</relationshipLabel>
    <relationshipName>Titles</relationshipName>
    <type>Lookup</type>
</CustomField>