ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Price_Paid__c</fullName>
    <label>Price Paid (LR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>