ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Reg_Order__c.field-meta.xml
<CustomField>
    <fullName>Reg_Order__c</fullName>
    <label>Reg Order (LR)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>