ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>