ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Register_Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Register_Property_Description__c</fullName>
    <label>Register Property Description (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>