ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure (LR)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>