ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term (LR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>