ezyplot-x1/force-app/main/default/objects/LR_Title__c/fields/Unique_custom_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_custom_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique custom ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>