ezyplot-x1/force-app/main/default/objects/LR_Title__c/recordTypes/Main.recordType-meta.xml
<RecordType>
    <fullName>Main</fullName>
    <active>true</active>
    <description>Main</description>
    <label>Main</label>
</RecordType>