ezyplot-x1/force-app/main/default/objects/LR_Title__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unique_custom_ID__c</columns>
    <columns>NAME</columns>
    <columns>Register_Property_Description__c</columns>
    <columns>Associated_Property_Description__c</columns>
    <columns>Area__c</columns>
    <columns>Term__c</columns>
    <columns>Price_Paid__c</columns>
    <columns>LeaseTerm_end_date__c</columns>
    <columns>Lease_left__c</columns>
    <columns>Lease_registration_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>